--- a/aws-ocp-cluster-1/overlays/backend/namespace.yaml
+++ b/aws-ocp-cluster-1/overlays/backend/namespace.yaml
@@ -5,4 +5,4 @@ metadata:
   name: cluster-1-app
   labels:
     project: cluster-1-app
-    cluster: '{{ fromClusterClaim "name" }}'
+#    cluster: '{{ fromClusterClaim "name" }}'
